fix: fix spacings inside code tag

--- a/styles/base.css
+++ b/styles/base.css
@@ -107,6 +107,7 @@ code {
 }
 
 pre code {
+  padding: 0;
   border: 0;
   border-radius: 0;
 }
